Experimented with stage, animation, and svg
fs

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
     <div id="stage">
         
     <!-- Your Awesome Design -->
+    <h1>PNW</h1>
     <!-- <img id="random" src="" alt="Google Doodle"> -->
-  
+     <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 176 98"><defs><style>.cls-1{fill:rgb(91, 186, 339);}</style></defs><title>box</title><rect class="cls-1" x="0.5" y="0.5" width="175" height="97"/><path d="M519,120v96H345V120H519m1-1H344v98H520V119Z" transform="translate(-344 -119)"/></svg>
     </div>
     
     <input type="text" />
