--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
  </div>
     
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
-<script src='http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js'></script>
-<script src='http://matthew.wagerfield.com/parallax/deploy/jquery.parallax.js'></script>
+    <script src="js/plugin.js"></script>
 
     <script src="js/index.js"></script>
 
